[image_analysis/trench_detection,shenker/image_analysis] Remove coords_along, replace with skimage.measure.profile_line. Testing code in notebook checks that line overlay plotted in image_with_line diag plot corresponds with extracted profile, at least in x coördinate.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230619 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230619 Drift correction.ipynb
@@ -772,14 +772,14 @@
    },
    "outputs": [],
    "source": [
-    "%%time\n",
-    "diag = util.tree()\n",
-    "trenches, info = trench_detection.find_trenches(\n",
-    "    imgs[20],\n",
-    "    width_to_pitch_ratio=1.4 / 3.5,\n",
-    "    join_info=False,\n",
-    "    diagnostics=diag,\n",
-    ")"
+    "img_x = imgs[20].copy()\n",
+    "y = 167\n",
+    "x = 476\n",
+    "img_x[y, x] = 20_000\n",
+    "img_x[y + 1, x] = 0\n",
+    "img_x[y - 1, x] = 0\n",
+    "img_x[y, x - 1] = 0\n",
+    "img_x[y, x + 1] = 0"
    ]
   },
   {
@@ -791,7 +791,14 @@
    },
    "outputs": [],
    "source": [
-    "info"
+    "%%time\n",
+    "diag = util.tree()\n",
+    "trenches, info = trench_detection.find_trenches(\n",
+    "    img_x,\n",
+    "    width_to_pitch_ratio=1.4 / 3.5,\n",
+    "    join_info=False,\n",
+    "    diagnostics=diag,\n",
+    ")"
    ]
   },
   {
@@ -803,13 +810,95 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"bboxes\"]"
+    "info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "60",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"set_finding\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"set_finding\"][\"profiles\"].Curve.XXX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"set_finding\"][\"stacked_profile\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"bboxes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "diag[\"label_1\"][\"find_trench_ends\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"label_1\"][\"find_trench_ends\"][\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
    "metadata": {
     "tags": []
    },
@@ -824,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "68",
    "metadata": {
     "tags": []
    },
@@ -837,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -851,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -863,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "71",
    "metadata": {
     "tags": []
    },
@@ -876,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -888,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -903,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -917,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "75",
    "metadata": {
     "tags": []
    },
@@ -967,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -979,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -991,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -1003,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -1015,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -1027,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "81",
    "metadata": {
     "tags": []
    },
@@ -1046,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -1058,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1070,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -1082,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1093,94 +1182,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79",
+   "id": "86",
    "metadata": {},
    "source": [
     "# RevImage fix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/230213/230213induction.nd2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x.metadata[\"channels\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = x.get_frame_2D(t=0, v=0, c=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(z, downsample=4, scale=0.99)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "zz = z[::4, ::4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "zz.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.Image(zz, bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0]\n",
-    ")"
    ]
   },
   {
@@ -1192,6 +1197,90 @@
    },
    "outputs": [],
    "source": [
+    "x = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/230213/230213induction.nd2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x.metadata[\"channels\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = x.get_frame_2D(t=0, v=0, c=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "display_image(z, downsample=4, scale=0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "zz = z[::4, ::4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "zz.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hv.Image(zz, bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
+    "    aspect=zz.shape[1] / zz.shape[0]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "hv.Image(zz, bounds=(0, zz.shape[0], zz.shape[1], 0)).opts(\n",
     "    aspect=zz.shape[1] / zz.shape[0]\n",
     ")"
@@ -1200,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -1215,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1230,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1245,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1260,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1276,7 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1292,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1312,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1335,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1358,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1381,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1399,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1413,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1425,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1439,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1449,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "110",
    "metadata": {
     "tags": []
    },
@@ -1461,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "111",
    "metadata": {
     "tags": []
    },
@@ -1473,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "112",
    "metadata": {
     "tags": []
    },
@@ -1487,7 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "113",
    "metadata": {
     "tags": []
    },
@@ -1509,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "114",
    "metadata": {
     "tags": []
    },
@@ -1525,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "115",
    "metadata": {
     "tags": []
    },
@@ -1543,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1623,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "127",
    "metadata": {
     "tags": []
    },
@@ -1682,7 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "131",
    "metadata": {
     "tags": []
    },
@@ -1732,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "132",
    "metadata": {
     "tags": []
    },
@@ -1744,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "133",
    "metadata": {
     "tags": []
    },
