[image_analysis,shenker] WIP rewriting line profile code in trench_detection code.
- Rewrote _line_profile_coordinates to be much faster than skimage.measure.profile._line_profile_coordinates (replaced list comprehensions with array broadcasting, checked that it gave identical results).
- Rewrote skimage.measure.profile_line to accept pre-computed coordinates.
- Modified get_trench_line_profiles to work with these new functions. There were some bugs introduced when replacing coords_along with profile_line.
- angled_line_profile_endpoints is a replacement for trench_anchors and edge_point that uses skspatial to compute more robust/accurate angled line segments intersecting image area.
- angled_profiles is a drop-in replacement for get_trench_line_profiles that uses the improved geometry handling of angled_line_profile_endpoints. Have not validated it or switched over yet, will in the next commit.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230711 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230711 Drift correction.ipynb
@@ -794,7 +794,9 @@
     "%%time\n",
     "diag = util.tree()\n",
     "trenches, info = trench_detection.find_trenches(\n",
-    "    img_x,\n",
+    "    imgs[20],\n",
+    "    angle=np.deg2rad(50),\n",
+    "    pitch=16.482897384305836,\n",
     "    width_to_pitch_ratio=1.4 / 3.5,\n",
     "    join_info=False,\n",
     "    diagnostics=diag,\n",
@@ -810,7 +812,7 @@
    },
    "outputs": [],
    "source": [
-    "info"
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
    ]
   },
   {
@@ -822,7 +824,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"].keys()"
+    "info"
    ]
   },
   {
@@ -834,7 +836,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"profiles\"].Curve.XXX"
+    "diag[\"labeling\"][\"set_finding\"].keys()"
    ]
   },
   {
@@ -846,7 +848,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"stacked_profile\"]"
+    "diag[\"labeling\"][\"set_finding\"][\"profiles\"].Curve.XXX"
    ]
   },
   {
@@ -858,7 +860,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+    "diag[\"labeling\"][\"set_finding\"][\"stacked_profile\"]"
    ]
   },
   {
@@ -1185,7 +1187,7 @@
    "id": "86",
    "metadata": {},
    "source": [
-    "# RevImage fix"
+    "# Cross-correlation"
    ]
   },
   {
@@ -1197,7 +1199,7 @@
    },
    "outputs": [],
    "source": [
-    "x = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/230213/230213induction.nd2\")"
+    "nd2 = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/210511/RBS_ramp.nd2\")"
    ]
   },
   {
@@ -1209,29 +1211,29 @@
    },
    "outputs": [],
    "source": [
-    "x.metadata[\"channels\"]"
+    "c = 2\n",
+    "f1 = nd2.get_frame_2D(v=30, t=170, c=c)\n",
+    "f2 = nd2.get_frame_2D(v=30, t=171, c=c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = x.get_frame_2D(t=0, v=0, c=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "display_image(z, downsample=4, scale=0.99)"
+    "display_image(f1, scale=0.99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90",
+   "metadata": {},
+   "source": [
+    "# Improved trench lines"
    ]
   },
   {
@@ -1243,7 +1245,8 @@
    },
    "outputs": [],
    "source": [
-    "zz = z[::4, ::4]"
+    "k1 = 8.947368421052635e-10\n",
+    "img = image.correct_radial_distortion(nd2.get_frame_2D(t=10, v=0, c=0), k1=k1)"
    ]
   },
   {
@@ -1255,7 +1258,11 @@
    },
    "outputs": [],
    "source": [
-    "zz.shape[0]"
+    "%%time\n",
+    "diag = util.tree()\n",
+    "trenches, info = trench_detection.find_trenches(\n",
+    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag\n",
+    ")"
    ]
   },
   {
@@ -1267,23 +1274,17 @@
    },
    "outputs": [],
    "source": [
-    "hv.Image(zz, bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0]\n",
-    ")"
+    "info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "94",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(zz, bounds=(0, zz.shape[0], zz.shape[1], 0)).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0]\n",
-    ")"
+    "info"
    ]
   },
   {
@@ -1295,10 +1296,7 @@
    },
    "outputs": [],
    "source": [
-    "hv.Image(zz, bounds=(0, zz.shape[0], zz.shape[1], 0)).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0],\n",
-    "    invert_yaxis=True,\n",
-    ")"
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
    ]
   },
   {
@@ -1310,536 +1308,141 @@
    },
    "outputs": [],
    "source": [
-    "hv.Image(zz, bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0],\n",
-    "    invert_yaxis=True,\n",
-    ")"
+    "display_image(img, scale=0.9)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "97",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(zz[::-1], bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0],\n",
-    "    invert_yaxis=True,\n",
-    ")"
+    "import skimage.measure.profile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "98",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(zz[::-1], bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0],\n",
-    "    invert_yaxis=True,\n",
-    ") * hv.Points([(100, 100)]).opts(size=100, color=\"red\")"
+    "%%time\n",
+    "x = skimage.measure.profile._line_profile_coordinates((0, 0), (3000, 7000), 8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "99",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(\n",
-    "    zz,\n",
-    "    bounds=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "    extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    ").opts(aspect=zz.shape[1] / zz.shape[0])"
+    "x.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "100",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(\n",
-    "    zz,\n",
-    "    bounds=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "    extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    ").opts(aspect=zz.shape[1] / zz.shape[0], invert_yaxis=True)"
+    "%%pyinstrument\n",
+    "diag2 = util.tree()\n",
+    "trenches2, info2 = trench_detection.find_trenches(\n",
+    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "101",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Overlay(\n",
-    "    [\n",
-    "        hv.Image(\n",
-    "            zz[::-1],\n",
-    "            bounds=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "            extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "        ).opts(aspect=zz.shape[1] / zz.shape[0])\n",
-    "    ]\n",
-    ").opts(invert_yaxis=True)"
+    "%%pyinstrument\n",
+    "diag3 = util.tree()\n",
+    "trenches3, info3 = trench_detection.find_trenches(\n",
+    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag3\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "102",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    hv.Overlay(\n",
-    "        [\n",
-    "            hv.Image(\n",
-    "                zz[::-1],\n",
-    "                bounds=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "                extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "            ).opts(aspect=zz.shape[1] / zz.shape[0])\n",
-    "        ]\n",
-    "    ).opts(invert_yaxis=True)\n",
-    "    * hv.Points([(100, 100)]).opts(size=100, color=\"red\")\n",
-    ")"
+    "info3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "103",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "diag = util.tree()\n",
+    "angle = np.deg2rad(-0.5)\n",
+    "rhos = np.linspace(*image.hough_bounds(img.shape, angle), 10)\n",
     "(\n",
-    "    hv.Overlay(\n",
-    "        [\n",
-    "            hv.Image(\n",
-    "                zz[::-1],\n",
-    "                bounds=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "                # extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "            ).opts(aspect=zz.shape[1] / zz.shape[0])\n",
-    "        ]\n",
-    "    ).opts(invert_yaxis=True)\n",
-    "    * hv.Points([(100, 100)]).opts(size=100, color=\"red\")\n",
-    ").opts(invert_yaxis=True)"
+    "    profiles,\n",
+    "    stacked_points,\n",
+    "    anchor_idx,\n",
+    ") = trench_detection.profile.get_trench_line_profiles(\n",
+    "    img, angle, rhos, diagnostics=diag\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "104",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    hv.Overlay(\n",
-    "        [\n",
-    "            hv.Image(\n",
-    "                zz[::-1],\n",
-    "                bounds=(0, zz.shape[0], zz.shape[1], 0),\n",
-    "                # extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    "            ).opts(aspect=zz.shape[1] / zz.shape[0])\n",
-    "        ]\n",
-    "    ).opts(invert_yaxis=True)\n",
-    "    * hv.Points([(100, 100)]).opts(size=100, color=\"red\")\n",
-    ").opts(invert_yaxis=True)"
+    "plt.plot(profiles.T);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "105",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(\n",
-    "    zz[::-1],\n",
-    "    bounds=(0, zz.shape[0], zz.shape[1], 0),\n",
-    "    # extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    ").opts(\n",
-    "    hv.opts.Image(aspect=zz.shape[1] / zz.shape[0], invert_yaxis=True)\n",
-    ")  # * hv.Points([(100, 100)]).opts(size=100, color=\"red\")).opts(invert_yaxis=True)"
+    "image.hough_bounds(img.shape, angle)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "106",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(\n",
-    "    zz[::-1], bounds=(0, -zz.shape[0], zz.shape[1], 0), extents=(0, 0, 100, 200)\n",
-    ").opts(invert_yaxis=True)"
+    "%%time\n",
+    "diag2 = util.tree()\n",
+    "profiles2, stacked_points2 = trench_detection.profile.angled_profiles(\n",
+    "    img, angle, rhos, diagnostics=diag2\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "107",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "zz.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "108",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "diag = util.tree()\n",
-    "t = trench_detection.find_trenches(z, width_to_pitch_ratio=1.4 / 3.5, diagnostics=diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"bboxes\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "110",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "111",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ui.RevImage(z, scale=0.997) * hv.Points([(100, 100)]).opts(size=10, color=\"red\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "112",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ui.RevImage(z, scale=0.997) * trench_detection.plot_trenches(\n",
-    "    t\n",
-    ")  # .opts(invert_yaxis=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "113",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.Image(\n",
-    "    zz[::1],\n",
-    "    bounds=(0, zz.shape[0], zz.shape[1], 0),\n",
-    "    extents=(0, -zz.shape[0], zz.shape[1], zz.shape[0]),\n",
-    ").redim.range(z=(0, np.percentile(zz, 99.7))).opts(\n",
-    "    hv.opts.Image(aspect=zz.shape[1] / zz.shape[0], invert_yaxis=True)\n",
-    ") * hv.Points(\n",
-    "    [(100, 100)]\n",
-    ").opts(\n",
-    "    size=10, color=\"red\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "114",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.Image(\n",
-    "    zz[::1],\n",
-    "    bounds=(0, -zz.shape[0], zz.shape[1], 0),\n",
-    "    extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    ").opts(hv.opts.Image(aspect=zz.shape[1] / zz.shape[0], invert_yaxis=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "115",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.Image(\n",
-    "    zz[::-1],\n",
-    "    bounds=(0, zz.shape[0], zz.shape[1], 0),\n",
-    "    extents=(0, 0, zz.shape[1], zz.shape[0]),\n",
-    ").opts(\n",
-    "    hv.opts.Image(aspect=zz.shape[1] / zz.shape[0], invert_yaxis=True)\n",
-    ")  # * hv.Points([(100, 100)]).opts(size=100, color=\"red\")).opts(invert_yaxis=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "116",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.Image(z) * trench_detection.plot_trenches(t).opts(invert_yaxis=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "117",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.percentile(z, 99.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "118",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = hv.Image(np.random.random((10, 10)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "119",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.vdims[0].range"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "120",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.Image(z, scale=0.997)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "121",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.Image(np.random.random((10, 10)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "122",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%opts?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "123",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%opts [invert_yaxis=True]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "124",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.Image(np.random.random((10, 10))) * hv.Points([(1, 1)]).opts(\n",
-    "    size=10, color=\"red\", invert_yaxis=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "125",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.Image(np.random.random((10, 10))) * hv.Points([(0, 0)]).opts(size=10, color=\"red\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "126",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = (\n",
-    "    hv.Image(\n",
-    "        z[::-4, ::4],\n",
-    "        bounds=(\n",
-    "            0,\n",
-    "            0,\n",
-    "            z.shape[1],\n",
-    "            z.shape[0],\n",
-    "        ),  # , extents=(0, z.shape[0], z.shape[1], 0)\n",
-    "    )\n",
-    "    .redim.range(z=(z.min(), np.percentile(z, 99.7)))\n",
-    "    .opts(\n",
-    "        aspect=z.shape[1] / z.shape[0],\n",
-    "        invert_yaxis=True,\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "127",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ui.RevImage(np.random.random((10, 10)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "128",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    ui.RevImage(np.random.random((10, 10)))  # .opts(invert_yaxis=False)\n",
-    "    * hv.Points([(1, 1)]).opts(size=10, color=\"red\")\n",
-    ").opts(hv.opts.Overlay(invert_yaxis=True), hv.opts.Image(invert_yaxis=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "129",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    ui.RevImage(np.random.random((10, 10))).opts(invert_yaxis=False)\n",
-    "    * hv.Points([(1, 1)]).opts(size=10, color=\"red\")\n",
-    ").opts(invert_yaxis=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "130",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.opts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "131",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.Image(z[::-4, ::4], bounds=(0, 0, shape[1], shape[0])).opts(\n",
-    "    hv.opts.Image(invert_yaxis=True)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "132",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ui.RevImage(np.asarray(z))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "133",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(z, scale=0.9)"
+    "# TODO: there is a difference!!\n",
+    "plt.plot(profiles2.T);"
    ]
   }
  ],
