[shenker/image_analysis,image_analysis/trench_detection] WIP angled_profiles. Works, but needs to be tested and I plan to remove padded_points in the next commit because they are less useful than the unpadded points.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230711 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230711 Drift correction.ipynb
@@ -1377,13 +1377,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info3"
+    "%%pyinstrument\n",
+    "diag4 = util.tree()\n",
+    "trenches4, info4 = trench_detection.find_trenches(\n",
+    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag4\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
