--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
@@ -180,7 +180,9 @@
   {
    "cell_type": "markdown",
    "id": "14",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# FISH correction"
    ]
@@ -394,7 +396,9 @@
   {
    "cell_type": "markdown",
    "id": "29",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Drift correction"
    ]
@@ -730,7 +734,9 @@
   {
    "cell_type": "markdown",
    "id": "54",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Drift correction test"
    ]
@@ -1391,13 +1397,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info4"
+    "y = np.random.random(10) + np.arange(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Path(\n",
+    "    [(x, np.random.random(10) + np.arange(10), i) for i in range(10)], vdims=\"t\"\n",
+    ").options(color=\"t\", cmap=\"glasbey\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Path([(x, y)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%pyinstrument\n",
+    "diag5 = util.tree()\n",
+    "trenches5, info5 = trench_detection.find_trenches(\n",
+    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag5\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag5[\"labeling\"][\"set_finding\"][\"profiles\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag5[\"labeling\"][\"set_finding\"][\"profiles\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?np.isclose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,12 +1553,140 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: there is a difference!!\n",
     "plt.plot(profiles2.T);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "118",
+   "metadata": {},
+   "source": [
+    "# Faster angled_line_profile_endpoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "119",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k1 = 8.947368421052635e-10\n",
+    "img = image.correct_radial_distortion(nd2.get_frame_2D(t=10, v=0, c=0), k1=k1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "angle = np.deg2rad(-5)\n",
+    "rho = 10.5\n",
+    "# rhos = np.linspace(*image.hough_bounds(img.shape, angle), 10)\n",
+    "x_lim, y_lim = image.get_image_limits(img.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.hough_bounds(img.shape, angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "x = trench_detection.profile.angled_line_profile_endpoints_skspatial(\n",
+    "    angle, rho, x_lim, y_lim\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.cross([4, 1], [2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.cross([4, 1, 0], [2, 3, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%pyinstrument\n",
+    "angle = np.deg2rad(-5)\n",
+    "rhos = np.linspace(-1000,1000,1000)\n",
+    "y = trench_detection.profile.angled_line_profile_endpoints(angle, rhos, x_lim, y_lim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
    ]
   }
  ],
