--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
@@ -734,9 +734,7 @@
   {
    "cell_type": "markdown",
    "id": "54",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Drift correction test"
    ]
@@ -1193,7 +1191,7 @@
    "id": "86",
    "metadata": {},
    "source": [
-    "# Cross-correlation"
+    "# Improved trench lines"
    ]
   },
   {
@@ -1205,60 +1203,14 @@
    },
    "outputs": [],
    "source": [
-    "nd2 = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/210511/RBS_ramp.nd2\")"
+    "k1 = 8.947368421052635e-10\n",
+    "img = image.correct_radial_distortion(nd2.get_frame_2D(t=10, v=1, c=0), k1=k1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "88",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "c = 2\n",
-    "f1 = nd2.get_frame_2D(v=30, t=170, c=c)\n",
-    "f2 = nd2.get_frame_2D(v=30, t=171, c=c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(f1, scale=0.99)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90",
-   "metadata": {},
-   "source": [
-    "# Improved trench lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "k1 = 8.947368421052635e-10\n",
-    "img = image.correct_radial_distortion(nd2.get_frame_2D(t=10, v=0, c=0), k1=k1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1274,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1286,17 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1308,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1320,373 +1262,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "angle = info[\"angle\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%pyinstrument\n",
+    "lines = []\n",
+    "offsets = []\n",
+    "angle = np.deg2rad(-25)\n",
+    "rho_min, rho_max = image.hough_bounds(img.shape, angle)\n",
+    "rhos = np.linspace(rho_min, rho_max, 10)[:4]\n",
+    "for top, bottom, offset in trench_detection.profile.angled_line_profile_endpoints(\n",
+    "    angle, rhos, x_lim, y_lim\n",
+    "):\n",
+    "    print(top, offset)\n",
+    "    if top is None or np.any(np.isnan(top)):\n",
+    "        continue\n",
+    "    lines.append([top, bottom])\n",
+    "    offsets.append(offset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(rho_min, rho_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Path(lines).options(invert_yaxis=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [\n",
+    "    np.array([np.nan, np.nan]),\n",
+    "    np.array([711.60809135, 2954.0]),\n",
+    "    np.array([0.0, 1427.9515234]),\n",
+    "    np.array([np.nan, np.nan]),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import skimage.measure.profile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "x = skimage.measure.profile._line_profile_coordinates((0, 0), (3000, 7000), 8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "100",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%pyinstrument\n",
-    "diag2 = util.tree()\n",
-    "trenches2, info2 = trench_detection.find_trenches(\n",
-    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "101",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%pyinstrument\n",
-    "diag3 = util.tree()\n",
-    "trenches3, info3 = trench_detection.find_trenches(\n",
-    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag3\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "102",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%pyinstrument\n",
-    "diag4 = util.tree()\n",
-    "trenches4, info4 = trench_detection.find_trenches(\n",
-    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag4\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "103",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = np.random.random(10) + np.arange(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "104",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.arange(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "105",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Path(\n",
-    "    [(x, np.random.random(10) + np.arange(10), i) for i in range(10)], vdims=\"t\"\n",
-    ").options(color=\"t\", cmap=\"glasbey\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "106",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Path([(x, y)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "107",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%pyinstrument\n",
-    "diag5 = util.tree()\n",
-    "trenches5, info5 = trench_detection.find_trenches(\n",
-    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag5\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "108",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag5[\"labeling\"][\"set_finding\"][\"profiles\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "109",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag5[\"labeling\"][\"set_finding\"][\"profiles\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "110",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "?np.isclose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "111",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "112",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "113",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "diag = util.tree()\n",
-    "angle = np.deg2rad(-0.5)\n",
-    "rhos = np.linspace(*image.hough_bounds(img.shape, angle), 10)\n",
-    "(\n",
-    "    profiles,\n",
-    "    stacked_points,\n",
-    "    anchor_idx,\n",
-    ") = trench_detection.profile.get_trench_line_profiles(\n",
-    "    img, angle, rhos, diagnostics=diag\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "114",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(profiles.T);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "115",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.hough_bounds(img.shape, angle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "116",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "diag2 = util.tree()\n",
-    "profiles2, stacked_points2 = trench_detection.profile.angled_profiles(\n",
-    "    img, angle, rhos, diagnostics=diag2\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "117",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: there is a difference!!\n",
-    "plt.plot(profiles2.T);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "118",
-   "metadata": {},
-   "source": [
-    "# Faster angled_line_profile_endpoints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "119",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k1 = 8.947368421052635e-10\n",
-    "img = image.correct_radial_distortion(nd2.get_frame_2D(t=10, v=0, c=0), k1=k1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "120",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angle = np.deg2rad(-5)\n",
-    "rho = 10.5\n",
-    "# rhos = np.linspace(*image.hough_bounds(img.shape, angle), 10)\n",
-    "x_lim, y_lim = image.get_image_limits(img.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "121",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.hough_bounds(img.shape, angle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "122",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "x = trench_detection.profile.angled_line_profile_endpoints_skspatial(\n",
-    "    angle, rho, x_lim, y_lim\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "123",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "124",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.cross([4, 1], [2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "125",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.cross([4, 1, 0], [2, 3, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "126",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%pyinstrument\n",
-    "angle = np.deg2rad(-5)\n",
-    "rhos = np.linspace(-1000,1000,1000)\n",
-    "y = trench_detection.profile.angled_line_profile_endpoints(angle, rhos, x_lim, y_lim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "127",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "128",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "129",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
    ]
   }
  ],
