--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
@@ -799,8 +799,8 @@
     "diag = util.tree()\n",
     "trenches, info = trench_detection.find_trenches(\n",
     "    imgs[20],\n",
-    "    angle=np.deg2rad(50),\n",
-    "    pitch=16.482897384305836,\n",
+    "    # angle=np.deg2rad(89),\n",
+    "    # pitch=16.482897384305836,\n",
     "    width_to_pitch_ratio=1.4 / 3.5,\n",
     "    join_info=False,\n",
     "    diagnostics=diag,\n",
@@ -811,12 +811,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
+    "trenches[\"ul_x\"]"
    ]
   },
   {
@@ -828,7 +826,7 @@
    },
    "outputs": [],
    "source": [
-    "info"
+    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
    ]
   },
   {
@@ -840,7 +838,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"].keys()"
+    "info"
    ]
   },
   {
@@ -852,7 +850,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"profiles\"].Curve.XXX"
+    "diag[\"labeling\"][\"set_finding\"].keys()"
    ]
   },
   {
@@ -864,7 +862,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"stacked_profile\"]"
+    "diag[\"labeling\"][\"set_finding\"][\"profiles\"]"
    ]
   },
   {
@@ -895,83 +893,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"label_1\"][\"find_trench_ends\"][\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x = np.random.random((500, 500)) + np.arange(500)[:, np.newaxis] / 100\n",
-    "x = (\n",
-    "    np.arange(500)[np.newaxis, :] * np.ones(500)[:, np.newaxis]\n",
-    ")  # * np.random.random((500,500))# / 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(geometry.get_roi_crop(x == 467, trenches, 29)[:, :])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ui.RevImage(x == 467) * trench_detection.plot_trenches(\n",
-    "    trenches, lines=True, labels=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ui.RevImage(imgs[20]) * trench_detection.plot_trenches(trenches, lines=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(geometry.get_roi_crop(imgs[20], trenches, 29)[160:].T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -983,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "67",
    "metadata": {
     "tags": []
    },
@@ -998,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "68",
    "metadata": {
     "tags": []
    },
@@ -1012,13 +933,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "69",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "rois = trenches[(trenches[\"trench_set\"] == 2) & (trenches[\"top_x\"] < 100)][2:3]\n",
+    "rois = (\n",
+    "    trenches  # trenches[(trenches[\"trench_set\"] == 2) & (trenches[\"top_x\"] < 100)][2:3]\n",
+    ")\n",
     "t0 = 20\n",
     "t1 = 225\n",
     "# ts = np.arange(t0 + 1, t1)\n",
@@ -1062,67 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "drift.trench_cell_endpoints(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x = geometry.get_roi_crop(imgs[20], trenches, 33)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "rois"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81",
+   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -1141,200 +1004,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "71",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "shifts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ui.RevImage(nd2.get_frame_2D(v=0, t=0, c=1)[::4, ::4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(nd2.get_frame_2D(v=0, t=0, c=1), scale=0.99, downsample=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "trenches"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86",
-   "metadata": {},
-   "source": [
-    "# Improved trench lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "k1 = 8.947368421052635e-10\n",
-    "img = image.correct_radial_distortion(nd2.get_frame_2D(t=10, v=1, c=0), k1=k1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "diag = util.tree()\n",
-    "trenches, info = trench_detection.find_trenches(\n",
-    "    img, width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"image_with_lines\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(img, scale=0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angle = info[\"angle\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%pyinstrument\n",
-    "lines = []\n",
-    "offsets = []\n",
-    "angle = np.deg2rad(-25)\n",
-    "rho_min, rho_max = image.hough_bounds(img.shape, angle)\n",
-    "rhos = np.linspace(rho_min, rho_max, 10)[:4]\n",
-    "for top, bottom, offset in trench_detection.profile.angled_line_profile_endpoints(\n",
-    "    angle, rhos, x_lim, y_lim\n",
-    "):\n",
-    "    print(top, offset)\n",
-    "    if top is None or np.any(np.isnan(top)):\n",
-    "        continue\n",
-    "    lines.append([top, bottom])\n",
-    "    offsets.append(offset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(rho_min, rho_max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Path(lines).options(invert_yaxis=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = [\n",
-    "    np.array([np.nan, np.nan]),\n",
-    "    np.array([711.60809135, 2954.0]),\n",
-    "    np.array([0.0, 1427.9515234]),\n",
-    "    np.array([np.nan, np.nan]),\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
    ]
   }
  ],
